[package]
name = "worley_biomes"
version = "0.1.0"
edition = "2024"

[features]
default = ["bevy"]
bevy = ["dep:bevy", "dep:bevy-inspector-egui"]

[dependencies]
bracket-fast-noise = {git="ssh://git@github.com/TanTanDev/bracket-fast-noise.git", rev = "993b54ae2216"}
rand = "0.9.2"
ron = "0.12"
tinyvec = "1.10"
serde = { version= "1", features = ["derive"] }

# not required, used in examples, and we have a debug_plugin for bevy 
bevy = {version = "0.16.0", optional = true}
bevy-inspector-egui = {version = "0.33.1", optional = true}

[dev-dependencies]
criterion = {version="0.7", features = ["html_reports"]}

[[example]]
name = "3d"
path = "examples/3d.rs"
required-features = ["bevy"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["bevy"]

[[bench]]
name = "benches"
harness = false
